fix: bug where multiple hatching species would make the progress span flicker

--- a/web-data-viz/public/css/panels/hatchery.css
+++ b/web-data-viz/public/css/panels/hatchery.css
@@ -175,17 +175,26 @@
     gap: 8px;
 
     background-repeat: no-repeat;
-    background-position: center 30%;
-    background-size: 48px;
+    background-position: center 0%;
+    background-size: 80px;
+    position: relative;
 }
 
-.hatch-done-container {
+.slot-content {
     width: 90%;
+    position: absolute;
+    bottom: 5%;
+
     display: flex;
     flex-direction: column;
-    gap: 8px;
-    margin-top: auto;
-    z-index: 1;
+    align-items: center;
+    justify-content: center;
+}
+
+.slot-hatch-progress {
+    font-weight: bold;
+    font-style: italic;
+    color: var(--primary);
 }
 
 .place-dinosaur {
